添加统计代码

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,6 @@
     </footer>
 
     </div>
-
+    <script type="text/javascript" src="http://tajs.qq.com/stats?sId=21345625" charset="UTF-8"></script>
   </body>
 </html>
