docs: add two posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,18 @@
     <link href='/media/webfonts/ss-standard.css' rel='stylesheet'>
     <link href="/media/css/screen.css" rel="stylesheet">
 
+    <style>
+      img[alt='80%']{
+        zoom: 80%;
+      }
+      img[alt='50%']{
+        zoom: 50%;
+      }
+      img[alt='20%']{
+        zoom: 20%;
+      }
+    </style>
+
     <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
   </head>
   <body>
