--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,9 @@
       img[alt='50%']{
         zoom: 50%;
       }
+      img[alt='30%']{
+        zoom: 30%;
+      }
       img[alt='20%']{
         zoom: 20%;
       }
